--- a/packages/server-web/src/main.css
+++ b/packages/server-web/src/main.css
@@ -1,4 +1,58 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
-  background-color: green !important;
-  font-family: serif !important;
+  background-color: red;
+  font: 13px Helvetica, Arial;
+  background: rgb(255,255,255);
+  background: linear-gradient(270deg, rgba(255,255,255,1) 0%, rgba(173,25,87,1) 35%, rgba(0,212,255,1) 100%);
+}
+form {
+  background: #000;
+  padding: 3px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+form input {
+  border: 0;
+  padding: 10px;
+  width: 90%;
+  margin-right: .5%;
+}
+form button {
+  width: 9%;
+  background: rgb(130, 224, 255);
+  border: none;
+  padding: 10px;
+}
+#messages {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+#messages li {
+  padding: 5px 10px;
+}
+#messages li:nth-child(odd) {
+  background: #eee;
+}
+.todo::after {
+  clear: both;
+}
+.remove,
+.add-child {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  height: 25px;
+  width: 25px;
+}
+.options {
+  float: left;
+}
+.hide {
+  display: none;
 }
