--- a/packages/server-web/src/main.css
+++ b/packages/server-web/src/main.css
@@ -1,63 +1,47 @@
+:root {
+  --main-background: #f5f5f5;
+  --main-highlight: #b6d8aa;
+  --main-text: #000000;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 p {
-  color: #3B72F1;
+  color: #3b72f1;
 }
 body {
-  background-color: #f5f5f5;
-  font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  background-color: var(--main-background);
+  font: 14px "Helvetica Neue", Helvetica, Arial, sans-serif;
+  padding: 25px;
 }
 h1 {
-	font-weight: 100;
-	color: #B6D8AA;
+  font-weight: 100;
+  color: var(--main-highlight);
   padding-bottom: 1em;
 }
-form {
-  background: #000;
-  padding: 3px;
-  position: fixed;
-  bottom: 0;
+input {
+	display: block;
+	border: 0;
+	box-shadow: 0 2px 1px -1px #000;
+	padding: 10px;
   width: 100%;
-}
-form input {
-  border: 0;
-  padding: 10px;
-  width: 90%;
-  margin-right: .5%;
-}
-form button {
-  width: 9%;
-  background: rgb(130, 224, 255);
-  border: none;
-  padding: 10px;
-}
-#messages {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-#messages li {
-  padding: 5px 10px;
-}
-#messages li:nth-child(odd) {
-  background: #eee;
+  margin-right: 0.5%;
+  background-color: rgba(0, 0, 0, 0.05);
 }
 .todo-item {
-  margin: 10px;
-  width: 90%;
-  /* border-left: 1px solid #000; */
-  box-shadow: -5px 0px 5px -5px #000;
+	box-shadow: -5px 0px 5px -5px #000;
+	margin: 1em 0;
 }
 .todo-list {
   clear: both;
 }
 .todo-list ul {
   list-style-type: none;
-  padding-left: 25px;
+	padding-left: 25px;
 }
 .todo::after {
   clear: both;
@@ -79,9 +63,4 @@ form button {
 }
 .hide {
   display: none;
-}
-
-#create-todo {
-  width: 30%;
-	padding: 1em 0;
 }
