Move options to the right side for now
Signed-off-by: Joern Bernhardt <joern.bernhardt@googlemail.com>

--- a/packages/server-web/src/main.css
+++ b/packages/server-web/src/main.css
@@ -56,7 +56,7 @@ input {
   width: 25px;
 }
 .options {
-  float: left;
+  float: right;
   display: flex;
   flex-direction: row;
   align-content: space-between;
