--- a/packages/server-web/src/main.css
+++ b/packages/server-web/src/main.css
@@ -2,6 +2,7 @@
   --main-background: #f5f5f5;
   --main-highlight: #b6d8aa;
   --main-text: #000000;
+  --notice-small-color: rgba(0, 0, 0, 0.3);
 }
 
 * {
