Fix css modules as far as possible
Signed-off-by: Joern Bernhardt <joern.bernhardt@googlemail.com>

--- a/packages/server-web/src/style/config.scss
+++ b/packages/server-web/src/style/config.scss
@@ -1,3 +1,12 @@
 $background-color: #fcfcfc;
 $text-color: #000;
-$font-family-regular: Arial, Helvetica, sans-serif;
+$font-family-regular: "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+$main-background: #f5f5f5;
+$main-highlight: #b6d8aa;
+$main-text: #000000;
+$notice-small-color: rgba(0, 0, 0, 0.3);
+$options-box-background-color: rgb(255, 255, 255);
+$options-box-highlight: rgba(0, 0, 0, 0.3);
+
+$error-text: #c00;
