--- a/packages/server-web/src/style/scaffolding.scss
+++ b/packages/server-web/src/style/scaffolding.scss
@@ -1,4 +1,5 @@
 @import '../../node_modules/modern-normalize/modern-normalize.css';
+@import './font-source-code-pro.scss';
 
 body {
   background-color: $main-background;
@@ -10,7 +11,6 @@ body {
   --main-background: #f5f5f5;
   --main-highlight: #b6d8aa;
   --main-text: #000000;
-  --notice-small-color: rgba(0, 0, 0, 0.3);
   --options-box-background-color: rgb(255, 255, 255);
   --options-box-highlight: rgba(0, 0, 0, 0.3);
 }
