--- a/packages/server-web/src/style/config.scss
+++ b/packages/server-web/src/style/config.scss
@@ -3,11 +3,19 @@ $text-color: #000;
 $font-family-regular: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-family-monospace: "Source Code Pro";
 
-$main-background: #f5f5f5;
-$main-highlight: #b6d8aa;
-$main-text: #000000;
-$color-notice-small: rgba(0, 0, 0, 0.3);
-$options-box-background-color: rgb(255, 255, 255);
-$options-box-highlight: rgba(0, 0, 0, 0.3);
+$color-font: #2a2a2a;
+$color-logo: #48ba1f;
+$color-notification: #db2020;
+$color-create: #4a90e2;
+$color-background: #fafafa;
 
-$error-text: #c00;
+$color-notice-small: rgba($color-font, 0.3);
+
+$main-background: $color-background;
+$main-highlight: $color-logo;
+$main-text: $color-font;
+
+$options-box-background-color: lighten($color-background, 0.2);
+$options-box-highlight: rgba($color-font, 0.3);
+
+$error-text: $color-notification;
