--- a/packages/server-web/src/style/scaffolding.scss
+++ b/packages/server-web/src/style/scaffolding.scss
@@ -1,56 +1,31 @@
-@import '../../node_modules/modern-normalize/modern-normalize.css';
-@import './font-source-code-pro.scss';
+@import "../../node_modules/modern-normalize/modern-normalize.css";
+@import "./font-source-code-pro.scss";
+
+html {
+  height: 100%;
+  width: 100%;
+}
 
 body {
   background-color: $main-background;
   color: $main-text;
   font-family: $font-family-regular;
+  height: 100%;
+  width: 100%;
 }
 
-:root {
-  --main-background: #f5f5f5;
-  --main-highlight: #b6d8aa;
-  --main-text: #000000;
-  --options-box-background-color: rgb(255, 255, 255);
-  --options-box-highlight: rgba(0, 0, 0, 0.3);
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-body {
-  background-color: var(--main-background);
-  font: 14px "Helvetica Neue", Helvetica, Arial, sans-serif;
-  padding: 25px;
-}
-
-h1 {
-  font-weight: 100;
-  color: var(--main-highlight);
-  padding-bottom: 1em;
-}
-p {
-  margin-bottom: 25px;
-}
-
-#nav {
-  float: right;
+:root,
+#root,
+div#root {
+  min-height: 100%;
+  min-width: 100%;
 }
 
 button {
   -moz-box-shadow: 0px 10px 14px -7px #3e7327;
   -webkit-box-shadow: 0px 10px 14px -7px #3e7327;
   box-shadow: 0px 10px 14px -7px #3e7327;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #77b55a), color-stop(1, #72b352));
-  background: -moz-linear-gradient(top, #77b55a 5%, #72b352 100%);
-  background: -webkit-linear-gradient(top, #77b55a 5%, #72b352 100%);
-  background: -o-linear-gradient(top, #77b55a 5%, #72b352 100%);
-  background: -ms-linear-gradient(top, #77b55a 5%, #72b352 100%);
   background: linear-gradient(to bottom, #77b55a 5%, #72b352 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#77b55a', endColorstr='#72b352',GradientType=0);
   background-color: #77b55a;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
@@ -67,13 +42,7 @@ button {
   text-shadow: 0px 1px 0px #5b8a3c;
 }
 button:hover {
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #72b352), color-stop(1, #77b55a));
-  background: -moz-linear-gradient(top, #72b352 5%, #77b55a 100%);
-  background: -webkit-linear-gradient(top, #72b352 5%, #77b55a 100%);
-  background: -o-linear-gradient(top, #72b352 5%, #77b55a 100%);
-  background: -ms-linear-gradient(top, #72b352 5%, #77b55a 100%);
   background: linear-gradient(to bottom, #72b352 5%, #77b55a 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#72b352', endColorstr='#77b55a',GradientType=0);
   background-color: #72b352;
 }
 button:active {
