--- a/packages/server-web/src/style/scaffolding.scss
+++ b/packages/server-web/src/style/scaffolding.scss
@@ -10,15 +10,15 @@ body {
   background-color: $main-background;
   color: $main-text;
   font-family: $font-family-regular;
+  min-height: 100%;
   height: 100%;
+  min-width: 100%;
   width: 100%;
 }
 
-:root,
-#root,
-div#root {
-  min-height: 100%;
-  min-width: 100%;
+:global(#root) {
+  height: 100%;
+  width: 100%;
 }
 
 button {
