--- a/packages/server-web/src/style/scaffolding.scss
+++ b/packages/server-web/src/style/scaffolding.scss
@@ -11,9 +11,10 @@ body {
   color: $main-text;
   font-family: $font-family-regular;
   min-height: 100%;
-  height: 100%;
   min-width: 100%;
   width: 100%;
+  padding: 25px;
+  box-sizing: border-box;
 }
 
 :global(#root) {
